Adding page Lorem
Page Lorem has 3 colums.
Shrink list skills.
Indent paragraph.

--- a/styles.css
+++ b/styles.css
@@ -27,10 +27,6 @@ h3 {
 }
 /*Paragraph styles*/
 
-p:first-letter {
-  font-size: 20px;
-  font-weight: bold;
-}
 /* Section Styles */
 
 .main-nav {
@@ -86,7 +82,7 @@ header .profile-image {
   box-shadow: 7px 7px 1px rgba(255,255,255,1);
 }
 header .profile-image:hover {
-  transform: scale(1.5) rotate(-5deg);
+  transform: scale(1.2) rotate(-5deg);
 }
 .column-image {
   max-width: 100%;
@@ -113,6 +109,16 @@ header .profile-image:hover {
   background-color: #222;
   color: yellow;
 }
+
+.flex p:first-letter {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.flex p {
+  text-indent: 5%;
+}
+
 .card {
   margin: 30px;
   padding: 20px 40px 40px;
@@ -147,6 +153,11 @@ ul.skills {
   color: white;
   padding: 5px 10px;
   margin: 2px;
+  transition: all .5s;
+}
+
+.skills li:hover{
+  transform: scale(1.2) rotate(5deg);
 }
 
 .skills li:nth-child(odd) {
