update profile again

--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,7 @@ h3 {
   min-height: 30px;
   padding: 10px;
   position: fixed;
+  z-index: 100;
   text-align: center;
   border-bottom: 1.5px solid silver;
 }
@@ -177,7 +178,12 @@ label {
 .skills {
   position: relative;
   height: 13em;
-  margin: 1.5em 0 0 3.5em;
+  margin-top: 1.5em;
+}
+
+/*Lightbox styles*/
+.lb-img {
+  width: 50%;
 }
 
 /* 
@@ -197,24 +203,7 @@ label {
 		-webkit-transform-origin:left center;
 		transform-origin:left center;
 	}
-/*
-  unless the piece represents more than 50% of the whole chart.
-  then make it a square, and ensure the transform origin is
-  back in the center.
 
-  NOTE: since this is only ever a single piece, you could
-  move this to a piece specific rule and remove the extra class
-*/
-	.pie.big {
-		width:200px;
-		height:200px;
-		left:50px;
-		-moz-transform-origin:center center;
-		-ms-transform-origin:center center;
-		-o-transform-origin:center center;
-		-webkit-transform-origin:center center;
-		transform-origin:center center;
-	}
 /*
   this is the actual visible part of the pie. 
   Give it the same dimensions as the regular piece.
@@ -236,32 +225,18 @@ label {
 		transform-origin:right center;
 		
 	}
- /* if it's part of a big piece, bring it back into the square */
-	.pie.big:BEFORE {
-		left:0px;
-	}
-/* 
-  big pieces will also need a second semicircle, pointed in the
-  opposite direction to hide the first part behind.
-*/
-	.pie.big:AFTER {
-		content:"";
-		position:absolute;
-		width:100px;
-		height:200px;
-		left:100px;
-		border-radius:0 100px 100px 0;
-	}
+ 
 /*
   add colour to each piece.
 */
 	.pie:nth-of-type(1):BEFORE,
 	.pie:nth-of-type(1):AFTER {
-		background-color:blue;	
+		background-color:lightblue;
 	}
+
 	.pie:nth-of-type(2):AFTER,
 	.pie:nth-of-type(2):BEFORE {
-		background-color:green;	
+		background-color:lightgreen;	
 	}
 	.pie:nth-of-type(3):AFTER,
 	.pie:nth-of-type(3):BEFORE {
@@ -271,37 +246,81 @@ label {
 	.pie:nth-of-type(4):BEFORE {
 		background-color:orange;	
 	}
+  .pie:nth-of-type(5):AFTER,
+  .pie:nth-of-type(5):BEFORE {
+    background-color:yellow;  
+  }
+  .pie:nth-of-type(6):AFTER,
+  .pie:nth-of-type(6):BEFORE {
+    background-color:black;  
+  }
 /*
   now rotate each piece based on their cumulative starting
   position
 */
-	.pie[data-start="30"] {
-		-moz-transform: rotate(30deg); /* Firefox */
-		-ms-transform: rotate(30deg); /* IE */
-		-webkit-transform: rotate(30deg); /* Safari and Chrome */
-		-o-transform: rotate(30deg); /* Opera */
-		transform:rotate(30deg);
+	.pie[data-start="39"] {
+		-moz-transform: rotate(39deg); /* Firefox */
+		-ms-transform: rotate(39deg); /* IE */
+		-webkit-transform: rotate(39deg); /* Safari and Chrome */
+		-o-transform: rotate(39deg); /* Opera */
+		transform:rotate(39deg);
 	}
-	.pie[data-start="60"] {
-		-moz-transform: rotate(60deg); /* Firefox */
-		-ms-transform: rotate(60deg); /* IE */
-		-webkit-transform: rotate(60deg); /* Safari and Chrome */
-		-o-transform: rotate(60deg); /* Opera */
-		transform:rotate(60deg);
+	.pie[data-start="148"] {
+		-moz-transform: rotate(148deg); /* Firefox */
+		-ms-transform: rotate(148deg); /* IE */
+		-webkit-transform: rotate(148deg); /* Safari and Chrome */
+		-o-transform: rotate(148deg); /* Opera */
+		transform:rotate(148deg);
 	}
-	.pie[data-start="100"] {
-		-moz-transform: rotate(100deg); /* Firefox */
-		-ms-transform: rotate(100deg); /* IE */
-		-webkit-transform: rotate(100deg); /* Safari and Chrome */
-		-o-transform: rotate(100deg); /* Opera */
-		transform:rotate(100deg);
+	.pie[data-start="258"] {
+		-moz-transform: rotate(258deg); /* Firefox */
+		-ms-transform: rotate(258deg); /* IE */
+		-webkit-transform: rotate(258deg); /* Safari and Chrome */
+		-o-transform: rotate(258deg); /* Opera */
+		transform:rotate(258deg);
 	}
+  .pie[data-start="288"] {
+    -moz-transform: rotate(288deg); /* Firefox */
+    -ms-transform: rotate(288deg); /* IE */
+    -webkit-transform: rotate(288deg); /* Safari and Chrome */
+    -o-transform: rotate(288deg); /* Opera */
+    transform:rotate(288deg);
+  }
+  .pie[data-start="328"] {
+    -moz-transform: rotate(328deg); /* Firefox */
+    -ms-transform: rotate(328deg); /* IE */
+    -webkit-transform: rotate(328deg); /* Safari and Chrome */
+    -o-transform: rotate(328deg); /* Opera */
+    transform:rotate(328deg);
+  }
 /*
   and rotate the amount of the pie that's showing.
 
   NOTE: add an extra degree to all but the final piece, 
   to fill in unsightly gaps.
 */
+  .pie[data-value="39"]:BEFORE {
+    -moz-transform: rotate(40deg); /* Firefox */
+    -ms-transform: rotate(40deg); /* IE */
+    -webkit-transform: rotate(40deg); /* Safari and Chrome */
+    -o-transform: rotate(40deg); /* Opera */
+    transform:rotate(40deg);
+  }
+
+	.pie[data-value="109"]:BEFORE {
+		-moz-transform: rotate(110deg); /* Firefox */
+		-ms-transform: rotate(110deg); /* IE */
+		-webkit-transform: rotate(110deg); /* Safari and Chrome */
+		-o-transform: rotate(110deg); /* Opera */
+		transform:rotate(110deg);
+	}
+	.pie[data-value="110"]:BEFORE {
+		-moz-transform: rotate(111deg); /* Firefox */
+		-ms-transform: rotate(111deg); /* IE */
+		-webkit-transform: rotate(111deg); /* Safari and Chrome */
+		-o-transform: rotate(111deg); /* Opera */
+		transform:rotate(111deg);
+	}
 	.pie[data-value="30"]:BEFORE {
 		-moz-transform: rotate(31deg); /* Firefox */
 		-ms-transform: rotate(31deg); /* IE */
@@ -309,33 +328,56 @@ label {
 		-o-transform: rotate(31deg); /* Opera */
 		transform:rotate(31deg);
 	}
-	.pie[data-value="40"]:BEFORE {
-		-moz-transform: rotate(41deg); /* Firefox */
-		-ms-transform: rotate(41deg); /* IE */
-		-webkit-transform: rotate(41deg); /* Safari and Chrome */
-		-o-transform: rotate(41deg); /* Opera */
-		transform:rotate(41deg);
-	}
-	.pie[data-value="260"]:BEFORE {
-		-moz-transform: rotate(260deg); /* Firefox */
-		-ms-transform: rotate(260deg); /* IE */
-		-webkit-transform: rotate(260deg); /* Safari and Chrome */
-		-o-transform: rotate(260deg); /* Opera */
-		transform:rotate(260deg);
-	}
-/*
-NOTE: you could also apply custom classes (i.e. .s0 .v30)
-but if the CSS3 attr() function proposal ever gets implemented,
-then all the above custom piece rules could be replaced with
-the following:
+  .pie[data-value="40"]:BEFORE {
+    -moz-transform: rotate(41deg); /* Firefox */
+    -ms-transform: rotate(41deg); /* IE */
+    -webkit-transform: rotate(41deg); /* Safari and Chrome */
+    -o-transform: rotate(41deg); /* Opera */
+    transform:rotate(41deg);
+  }
+  .pie[data-value="32"]:BEFORE {
+    -moz-transform: rotate(33deg); /* Firefox */
+    -ms-transform: rotate(33deg); /* IE */
+    -webkit-transform: rotate(33deg); /* Safari and Chrome */
+    -o-transform: rotate(33deg); /* Opera */
+    transform:rotate(33deg);
+  }
 
-.pie[data-start] {
-   transform:rotate(attr(data-start,deg,0);
+.skills-labels li {
+  list-style-type: none;
+  margin-bottom: 2px;
 }
-.pie[data-value]:BEFORE {
-   transform:rotate(attr(data-value,deg,0);
+
+span.labels {
+  display: inline-block;
+  padding: 7px;
+  margin-right: 10px;
+  border-radius: 2px;
 }
-*/
+
+.label-HTML {
+  background: lightblue;
+}
+
+.label-CSS {
+  background: lightgreen;
+}
+
+.label-Javascript {
+  background: red;
+}
+
+.label-MySQL {
+  background: orange;
+}
+
+.label-PHP {
+  background: yellow;
+}
+
+.label-Wordpress {
+  background: black;
+}
 
 .dum-back {
   background: linear-gradient(#ffa949,transparent);
